--- a/common/pom.xml
+++ b/common/pom.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <groupId>org.5gefficiencysimulator</groupId>
-        <artifactId>5g-efficiency-simulator</artifactId>
-        <version>2.0</version>
-    </parent>
-    <modelVersion>4.0.0</modelVersion>
+  xmlns="http://maven.apache.org/POM/4.0.0"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <artifactId>common</artifactId>
+  <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>common</artifactId>
+  <parent>
+    <artifactId>5g-efficiency-simulator</artifactId>
+    <groupId>org.5gefficiencysimulator</groupId>
+    <version>2.0</version>
+  </parent>
 
-    <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-    </properties>
-
+  <dependencies>
+    <dependency>
+      <artifactId>msgpack-core</artifactId>
+      <groupId>org.msgpack</groupId>
+      <version>0.9.8</version>
+    </dependency>
+  </dependencies>
 </project>
