--- a/broker/pom.xml
+++ b/broker/pom.xml
@@ -15,6 +15,11 @@
       <groupId>org.apache.commons</groupId>
       <version>1.10.0</version>
     </dependency>
+    <dependency>
+      <groupId>me.tongfei</groupId>
+      <artifactId>progressbar</artifactId>
+      <version>0.10.0</version>
+    </dependency>
   </dependencies>
 
   <modelVersion>4.0.0</modelVersion>
