--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
     <org.lombok.version>1.18.30</org.lombok.version>
     <slf4j.version>2.0.12</slf4j.version>
     <logback.version>1.5.0</logback.version>
+    <picocli.version>4.7.5</picocli.version>
     <msgpack-core.version>0.9.8</msgpack-core.version>
     <commons-csv.version>1.10.0</commons-csv.version>
     <progressbar.version>0.10.0</progressbar.version>
@@ -49,6 +50,11 @@
         <groupId>ch.qos.logback</groupId>
         <artifactId>logback-classic</artifactId>
         <version>${logback.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>info.picocli</groupId>
+        <artifactId>picocli</artifactId>
+        <version>${picocli.version}</version>
       </dependency>
       <!-- COMMON -->
       <dependency>
@@ -115,7 +121,10 @@
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
     </dependency>
-
+    <dependency>
+      <groupId>info.picocli</groupId>
+      <artifactId>picocli</artifactId>
+    </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
