--- a/pom.xml
+++ b/pom.xml
@@ -20,18 +20,21 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>21</maven.compiler.source>
     <maven.compiler.target>21</maven.compiler.target>
-    <org.lombok.version>1.18.30</org.lombok.version>
-    <slf4j.version>2.0.12</slf4j.version>
-    <logback.version>1.5.0</logback.version>
-    <picocli.version>4.7.5</picocli.version>
+    <org.lombok.version>1.18.34</org.lombok.version>
+    <slf4j.version>2.0.16</slf4j.version>
+    <logback.version>1.5.12</logback.version>
+    <picocli.version>4.7.6</picocli.version>
+    <!-- COMMON -->
     <msgpack-core.version>0.9.8</msgpack-core.version>
-    <commons-csv.version>1.10.0</commons-csv.version>
-    <progressbar.version>0.10.0</progressbar.version>
-    <junit.jupiter.version>5.10.2</junit.jupiter.version>
-    <mockito.core.version>5.10.0</mockito.core.version>
-    <assertj-core.version>3.25.3</assertj-core.version>
-    <instancio-junit.version>4.3.2</instancio-junit.version>
-    <pitest.version>1.15.8</pitest.version>
+    <!-- BROKER -->
+    <commons-csv.version>1.12.0</commons-csv.version>
+    <progressbar.version>0.10.1</progressbar.version>
+    <!-- TEST -->
+    <junit.jupiter.version>5.11.3</junit.jupiter.version>
+    <mockito.core.version>5.14.2</mockito.core.version>
+    <assertj-core.version>3.26.3</assertj-core.version>
+    <instancio-junit.version>5.0.2</instancio-junit.version>
+    <pitest.version>1.17.1</pitest.version>
   </properties>
 
   <dependencyManagement>
